--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!--HEADER SECTION-->
     <header class="header">
         <div class="header__container">
-            <img src="/images/logo.svg" alt="" class="image__container">
+            <img src="images/logo.svg" alt="" class="image__container">
         </div>
     </header>
 
